Further improved NSF class

--- a/nsf.cls
+++ b/nsf.cls
@@ -1,55 +1,69 @@
 % 
 % Class identification
+% [2020/8/6 NSF Template Latex class]
 % 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{nsf}[2019/2/15 NSF Template]
+\ProvidesClass{nsf}
 
 % 
 % Parent class
-% 
-\LoadClass[twoside,11pt]{article}
+%
+\DeclareOption{a4paper}{\OptionNotUsed}
+\DeclareOption{a5paper}{\OptionNotUsed}
+\DeclareOption{b5paper}{\OptionNotUsed}
+\DeclareOption{executivepaper}{\OptionNotUsed}
+\DeclareOption{legalpaper}{\OptionNotUsed}
+\DeclareOption{twocolumn}{\OptionNotUsed}
+\DeclareOption{landscape}{\OptionNotUsed}
+\DeclareOption{twoside}{\OptionNotUsed}
+\DeclareOption{notitlepage}{\OptionNotUsed}
+\DeclareOption{10pt}{\OptionNotUsed}
+\DeclareOption{12pt}{\OptionNotUsed}
+\DeclareOption*{\PassOptionsToClass{\CurrentOption}{article}}
+\ProcessOptions\relax
+\LoadClass[letterpaper,onecolumn,oneside,11pt]{article}
 
 % 
 % Packages
-% 
+%
+% Alphabetical order
 \RequirePackage{booktabs}
 \RequirePackage[skip=5pt,font=footnotesize]{caption}
-\RequirePackage{fancyhdr}
 \RequirePackage[T1]{fontenc}
-\RequirePackage[includeheadfoot,margin=1in]{geometry}
+\RequirePackage[margin=1in]{geometry}
 \RequirePackage[pdftex]{graphicx}
-\RequirePackage{mdframed}
+\RequirePackage[utf8]{inputenc}
+\RequirePackage{listings}
+\RequirePackage{longtable}
+\RequirePackage{mdframed} % for 'nsfframed' environment
+\RequirePackage{multirow}
 \RequirePackage[numbers]{natbib}
 \RequirePackage{paralist}
 \RequirePackage{subcaption}
 \RequirePackage{titlesec}
 \RequirePackage{tikz}
-\RequirePackage[pdfborderstyle={/S/U/W 1}]{hyperref}
-
-%
-% Document type
-%
-\newcommand{\nsfdocument}[1]{%
-  \gdef\@nsfdocument{#1}%
-}
+\RequirePackage{wrapfig}
+\RequirePackage{xcolor}
+\RequirePackage{xspace}
+% Specially ordered
+\RequirePackage{enumitem} % must be after paralist
+\RequirePackage[pdfborderstyle={/S/U/W 1}]{hyperref} % must be last
 
 % 
 % Spacing and style
 % 
-% Page headings
-\pagestyle{fancy}
-\renewcommand{\headrulewidth}{.75pt}
-\renewcommand{\footrulewidth}{.75pt}
-\fancyhf{}
-\fancyhead[LE,RO]{\thepage}
-\fancyhead[RE,LO]{\@nsfdocument}
-\fancyfoot[LE,RO]{\@title}
-\fancyfoot[RE,LO]{\@author}
 % Titles
 \titlespacing{\section}{1ex}{1ex}{1ex}
 \titlespacing{\subsection}{.75ex}{1ex}{.75ex}
 \titlespacing{\subsubsection}{.5ex}{1ex}{.5ex}
 \titlespacing{\paragraph}{0pt}{0pt}{1ex}
+% Floats
+% TODO
+
+%
+% Framed environment
+%
+\newenvironment{nsfframed}[1]{\begin{mdframed}\textbf{#1:}}{\end{mdframed}}
 
 % 
 % Useful macros
