Added indentation before and period after \paragraph

--- a/example.tex
+++ b/example.tex
@@ -20,16 +20,16 @@
   \caption{This is a cool project.}
   \label{fig:concept}
 \end{wrapfigure}
-\paragraph{Context and motivation.}
+\paragraph{Context and motivation}
 \lipsum[1]
 
-\paragraph{Problem statement.}
+\paragraph{Problem statement}
 \lipsum[1]
 
-\paragraph{Intellectual merit.}
+\paragraph{Intellectual merit}
 \lipsum[1]
 
-\paragraph{Objectives.}
+\paragraph{Objectives}
 \lipsum[1]
 \begin{figure}[t]
   \centering
@@ -74,7 +74,7 @@
   \label{fig:q11fig}
 \end{wrapfigure}
 \lipsum[1-3]
-\paragraph{Risks and mitigation.}
+\paragraph{Risks and mitigation}
 \lipsum[4]
 
 \subsubsection{Q1.2: Title}
@@ -89,7 +89,7 @@
   \label{fig:q12fig}
 \end{wrapfigure}
 \lipsum[1-3]
-\paragraph{Risks and mitigation.}
+\paragraph{Risks and mitigation}
 \lipsum[4]
 
 \subsubsection{Q1.3: Title}
@@ -104,7 +104,7 @@
   \label{fig:q13fig}
 \end{wrapfigure}
 \lipsum[1-3]
-\paragraph{Risks and mitigation.}
+\paragraph{Risks and mitigation}
 \lipsum[4]
 
 \subsection{O2: Title}
@@ -132,7 +132,7 @@
   \label{fig:q21fig}
 \end{wrapfigure}
 \lipsum[1-3]
-\paragraph{Risks and mitigation.}
+\paragraph{Risks and mitigation}
 \lipsum[4]
 
 \subsubsection{Q2.2: Title}
@@ -147,7 +147,7 @@
   \label{fig:q22fig}
 \end{wrapfigure}
 \lipsum[1-3]
-\paragraph{Risks and mitigation.}
+\paragraph{Risks and mitigation}
 \lipsum[4]
 
 \subsubsection{Q2.3: Title}
@@ -162,7 +162,7 @@
   \label{fig:q23fig}
 \end{wrapfigure}
 \lipsum[1-3]
-\paragraph{Risks and mitigation.}
+\paragraph{Risks and mitigation}
 \lipsum[4]
 
 \subsection{O3: Title}
@@ -190,7 +190,7 @@
   \label{fig:q31fig}
 \end{wrapfigure}
 \lipsum[1-3]
-\paragraph{Risks and mitigation.}
+\paragraph{Risks and mitigation}
 \lipsum[4]
 
 \subsubsection{Q3.2: Title}
@@ -205,7 +205,7 @@
   \label{fig:q32fig}
 \end{wrapfigure}
 \lipsum[1-3]
-\paragraph{Risks and mitigation.}
+\paragraph{Risks and mitigation}
 \lipsum[4]
 
 \subsubsection{Q3.3: Title}
@@ -220,19 +220,19 @@
   \label{fig:q33fig}
 \end{wrapfigure}
 \lipsum[1-3]
-\paragraph{Risks and mitigation.}
+\paragraph{Risks and mitigation}
 \lipsum[4]
 
 \section{Broader Impacts}
 \label{sec:broaderimpacts}
 
-\paragraph{Society.}
+\paragraph{Society}
 \lipsum[1]
 
-\paragraph{Industry.}
+\paragraph{Industry}
 \lipsum[1]
 
-\paragraph{Education.}
+\paragraph{Education}
 \lipsum[1]
 
 \section{Prior NSF Support}
